update tar for backup export to work
tar coming with busybox does not work

not working : tar (busybox) 1.35.0

working version :  tar (GNU tar) 1.34

--- a/emoncms/alpine_persistent/Dockerfile
+++ b/emoncms/alpine_persistent/Dockerfile
@@ -47,7 +47,7 @@ ARG \
 
 RUN apk update && apk upgrade
 
-RUN apk add --no-cache tzdata xz bash git make;\
+RUN apk add --no-cache tzdata xz bash git make tar;\
 	apk add --no-cache sed nano;\
 	apk add --no-cache python3;\
 	apk add --no-cache ca-certificates wget;\
