--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -30,4 +30,4 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           build-args: EMONCMS_SRC=https://github.com/alexandrecuer/emoncms
           push: true
-          tags: alexjunk/emoncms:alpine3.16
+          tags: alexjunk/themis:alpine3.16
