--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 
 RUN apt-get -y update;\
     apt-get -y upgrade;\
-    apt-get -y install python3;\
+    apt-get -y install python3 python3-pip;\
     python3 -m pip install pip --upgrade;\
     python3 -m pip install --no-cache-dir tflite-runtime;\
     echo "import tflite_runtime.interpreter as tflite" >> test.py
