--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -1,5 +1,8 @@
 ARG BUILD_FROM=ubuntu:22.04
+
 FROM $BUILD_FROM
+
+ARG PYMODBUS_VERSION=3.4.1
 
 RUN apt-get -y update;\
     apt-get -y upgrade;\
@@ -7,7 +10,7 @@ RUN apt-get -y update;\
     apt-get install -y wget curl nano;\
     apt-get -y install python3 python3-pip;\
     python3 -m pip install --no-cache-dir pip --upgrade;\
-    python3 -m pip install --no-cache-dir pyserial pymodbus;\
+    python3 -m pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
     python3 -m pip install --no-cache-dir paho-mqtt;\
     python3 -m pip install --no-cache-dir mysql-connector-python redis;\
     python3 -m pip install --no-cache-dir click requests;\
