ctrl mqtt log (level, format) + mqtt host in emoncms.ini

--- a/emoncms/alpine_persistent/Dockerfile
+++ b/emoncms/alpine_persistent/Dockerfile
@@ -29,7 +29,10 @@ ENV \
 	# PHP_VER needed to install the php-dev apk package and for the path to PHP CONF/INI files
 	PHP_VER=8 \
 	# we dont modify php.ini, we create new extensions in conf.d
-	PHP_CONF=/etc/php8/conf.d
+	PHP_CONF=/etc/php8/conf.d \
+	MQTT_CONF=/etc/mosquitto/mosquitto.conf \
+	MQTT_HOST=localhost \
+	MQTT_LOG_LEVEL=error
 
 # /data creation
 RUN mkdir -p /data
@@ -38,7 +41,6 @@ ARG \
 	PRIMOS="apache2 redis mosquitto mariadb" \
 	SECONDOS="emoncms_mqtt service-runner feedwriter" \
 	HTTP_CONF=/etc/apache2/httpd.conf \
-	MQTT_CONF=/etc/mosquitto/mosquitto.conf \
 	REDIS_CONF=/etc/redis.conf \
 	# source for Mosquitto-PHP extension
 	# original repo is https://github.com/mgdm/Mosquitto-PHP
@@ -151,12 +153,6 @@ RUN set -x;\
 	cd phpredis && phpize && ./configure && make && make install;\
 	printf "extension=redis.so" | tee $PHP_CONF/redis.ini 1>&2;\
 	pip3 install redis;\
-	echo "persistence false" >> $MQTT_CONF;\
-	echo "allow_anonymous false" >> $MQTT_CONF;\
-	echo "listener 1883" >> $MQTT_CONF;\
-	echo "password_file /etc/mosquitto/passwd" >> $MQTT_CONF;\
-	echo "log_dest stdout" >> $MQTT_CONF;\
-	echo "#log_type error" >> $MQTT_CONF;\
 	git clone $MOSQUITTO_PHP;\
 	cd Mosquitto-PHP && phpize && ./configure && make && make install;\
 	printf "extension=mosquitto.so" | tee $PHP_CONF/mosquitto.ini 1>&2;\
