--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -6,6 +6,13 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+        - alpine_version: 3.16
+          php_version: 8
+        - alpine_version: 3.18
+          php_version: 81
     steps:
       -
         name: Checkout
@@ -28,6 +35,10 @@ jobs:
         with:
           context: emoncms/alpine_persistent/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          build-args: EMONCMS_SRC=https://github.com/alexandrecuer/emoncms
+          build-args: 
+            - EMONCMS_SRC=https://github.com/alexandrecuer/emoncms
+            - BUILD_FROM=alpine:${{ alpine_version }}
+            - PHP_VER={{ matrix.php_version }}
+            - PHP_CONF=/etc/php{{ matrix.php_version }}/conf.d
           push: true
           tags: alexjunk/themis:alpine3.16
