--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -41,4 +41,4 @@ jobs:
             "PHP_VER={{ matrix.php_version }}"
             "PHP_CONF=/etc/php{{ matrix.php_version }}/conf.d"
           push: true
-          tags: alexjunk/themis:alpine3.16
+          tags: alexjunk/themis:alpine{{ matrix.alpine_version }}
