--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -38,7 +38,7 @@ jobs:
           build-args: |
             "EMONCMS_SRC=https://github.com/alexandrecuer/emoncms"
             "BUILD_FROM=alpine:${{ matrix.alpine_version }}"
-            "PHP_VER={{ matrix.php_version }}"
-            "PHP_CONF=/etc/php{{ matrix.php_version }}/conf.d"
+            "PHP_VER=${{ matrix.php_version }}"
+            "PHP_CONF=/etc/php${{ matrix.php_version }}/conf.d"
           push: true
-          tags: alexjunk/themis:alpine{{ matrix.alpine_version }}
+          tags: alexjunk/themis:alpine${{ matrix.alpine_version }}
