--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -10,5 +10,5 @@ RUN apk update && apk upgrade;\
 	wget https://files.pythonhosted.org/packages/dd/2b/205ddff2314d4eea852e31d53b8e55eb3f32b292efc3dd86bd827ab9019d/numpy-1.26.2.tar.gz;\
 	tar -xvf numpy*;\
 	cd numpy-1.26.2;\
-	python setup.py install
+	python3 setup.py install
 	#apk del --no-cache py3-pip
