--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,5 @@ jobs:
     steps:
       - name: testing...
         run: |
-          echo "$matrix.emoncms_version"
+          echo ${{ matrix.emoncms_version}}
           echo "$php_version $matrix.alpine_version"
