--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,6 @@ jobs:
           wget https://raw.githubusercontent.com/emoncms/emoncms/master/version.json
           master_version=$(cat version.json | jq '.version')
           echo "::set-output name=matrix.master_version::${master_version//'%'/'%25'}"
-          echo ${{ matrix.emoncms_version }}
+          echo ${{ matrix.master_version }}
           echo ${{ matrix.php_version }}
           echo ${{ matrix.alpine_version}}
