--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,9 @@ jobs:
       - name: fetching version number
         run: |
           wget https://raw.githubusercontent.com/emoncms/emoncms/master/version.json
-          master_version=$(cat version.json | jq '.version')
+          master_version=$(cat version.json | jq --raw-output '.version')
           echo $master_version
+          echo "master_version=$master_version" >> "$GITHUB_ENV"
       - name: using..
         run: |
           echo $master_version
