--- a/emoncms/alpine_persistent/Dockerfile
+++ b/emoncms/alpine_persistent/Dockerfile
@@ -4,12 +4,11 @@ FROM $BUILD_FROM
 
 ARG \
 	TARGETPLATFORM \
-	S6_OVERLAY_VERSION=3.1.5.0 \
+	S6_OVERLAY_VERSION=3.1.6.2 \
 	S6_SRC=https://github.com/just-containers/s6-overlay/releases/download \
 	S6_DIR=/etc/s6-overlay/s6-rc.d \
 	PRIMOS="apache2 redis mosquitto mariadb" \
 	SECONDOS="emoncms_mqtt service-runner feedwriter" \
- 	HTTP_CONF=/etc/apache2/httpd.conf \
  	# PHP_VER needed to install the php-dev apk package and for the path to PHP CONF/INI files
 	PHP_VER=8 \
 	# we dont modify php.ini, we create new extensions in conf.d
@@ -42,7 +41,7 @@ RUN apk add --no-cache tzdata xz bash git make tar;\
 	apk add --no-cache sed nano;\
 	apk add --no-cache python3;\
 	apk add --no-cache ca-certificates wget;\
-	apk add --no-cache apache2 gettext;\
+	apk add --no-cache apache2 apache2-ssl gettext;\
 	apk add --no-cache mariadb mariadb-client;\
 	apk add --no-cache redis;\
 	apk add --no-cache mosquitto
@@ -87,28 +86,14 @@ WORKDIR $OEM_DIR
 
 COPY makefile .
 
-# apache2/emoncms conf
-RUN set -x;\
-	# the following 3 lines are for the admin module : not nice ;-(
-	# in container the admin module is just to see emoncms log
-	# solution could be not to use admin module anymore
-	# for this set enable_admin_ui to false
+# the following 3 lines are for the admin module : not nice ;-(
+# in container the admin module is just to see emoncms log
+# solution could be not to use admin module anymore
+# for this set enable_admin_ui to false
+RUN set -x;\	
 	git config --system --replace-all safe.directory '*';\
 	git clone https://github.com/openenergymonitor/EmonScripts;\
-	cp EmonScripts/install/emonsd.config.ini EmonScripts/install/config.ini;\
-	sed -i 's/^#ServerName.*/ServerName localhost/' $HTTP_CONF;\
-	sed -i '/LoadModule rewrite_module/s/^#//g' $HTTP_CONF;\
-	#sed -i 's/^#LoadModule rewrite/LoadModule rewrite/' $HTTP_CONF;\
-	# delete between 2 patterns with sed
-	# https://techstop.github.io/delete-lines-strings-between-two-patterns-sed/
-	sed -i '/<Directory "\/var\/www\/localhost\/htdocs\">/,/<\/Directory>/d' $HTTP_CONF;\
-	sed -i 's/localhost\/htdocs/emoncms/g' $HTTP_CONF;\
-	echo "<Directory $WWW/emoncms>" >> $HTTP_CONF;\
-	echo "    Options FollowSymLinks" >> $HTTP_CONF;\
-	echo "    AllowOverride All" >> $HTTP_CONF;\
-	echo "    DirectoryIndex index.php" >> $HTTP_CONF;\
-	echo "    Require all granted" >> $HTTP_CONF;\
-	echo "</Directory>" >> $HTTP_CONF
+	cp EmonScripts/install/emonsd.config.ini EmonScripts/install/config.ini
 
 # emoncms modules
 RUN set -x;\
@@ -149,7 +134,7 @@ RUN set -x;\
 	# this will remove sources for phpredis and Mosquitto-PHP
 	rm -Rf $OEM_DIR/phpredis
 
-COPY emoncms_pre.sh sql_ready.sh ./
+COPY emoncms_pre.sh sql_ready.sh update_emoncms_core_file.py ./
 
 # we create dynamically the database update script 
 # as it uses the $WWW env which will not be available at run time in php 
@@ -242,8 +227,12 @@ ENV \
 	MQTT_USER=emonpi \
 	MQTT_PASSWORD=emonpimqtt2016 \
 	MQTT_HOST=localhost \
-	MQTT_LOG_LEVEL=error
-	
+	MQTT_LOG_LEVEL=error \
+	HTTP_CONF=/etc/apache2/httpd.conf \
+	CRT_FILE=/etc/ssl/apache2/server.pem \
+	KEY_FILE=/etc/ssl/apache2/server.key \
+	CNAME=localhost \
+	REVERSE_PROXY=0
 
 EXPOSE 80 1883
 
