--- a/.github/workflows/bios_latest.yml
+++ b/.github/workflows/bios_latest.yml
@@ -1,4 +1,4 @@
-name: emoncms docker images to docker hub
+name: themis docker images to docker hub on latest tag
 
 on:
   workflow_dispatch:
@@ -6,6 +6,11 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+        - alpine_version: 3.18
+          php_version: 81
     steps:
       -
         name: Checkout
@@ -28,5 +33,10 @@ jobs:
         with:
           context: emoncms/alpine_persistent/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+          build-args: |
+            "EMONCMS_SRC=https://github.com/alexandrecuer/emoncms"
+            "BUILD_FROM=alpine:${{ matrix.alpine_version }}"
+            "PHP_VER=${{ matrix.php_version }}"
+            "PHP_CONF=/etc/php${{ matrix.php_version }}/conf.d"
           push: true
-          tags: alexjunk/emoncms:alpine3.16
+          tags: alexjunk/themis:latest
