--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -2,7 +2,10 @@ ARG BUILD_FROM=ubuntu:22.04
 
 FROM $BUILD_FROM
 
-ARG PYMODBUS_VERSION=3.4.1
+ARG \
+    PYMODBUS_VERSION=3.4.1 \
+    PAHO_VERSION=1.6.1 \
+    TFLITE_VERSION=2.13.0
 
 RUN apt-get -y update;\
     apt-get -y upgrade;\
@@ -11,10 +14,10 @@ RUN apt-get -y update;\
     apt-get -y install python3 python3-pip;\
     python3 -m pip install --no-cache-dir pip --upgrade;\
     python3 -m pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
-    python3 -m pip install --no-cache-dir paho-mqtt;\
+    python3 -m pip install --no-cache-dir paho-mqtt==$PAHO_VERSION;\
     python3 -m pip install --no-cache-dir mysql-connector-python redis;\
     python3 -m pip install --no-cache-dir click requests;\
-    python3 -m pip install --no-cache-dir tflite-runtime;\
+    python3 -m pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
     apt-get purge -y --auto-remove python3-pip;\
     apt-get clean
 
