--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -22,3 +22,4 @@ RUN apt-get -y update;\
     python3 -m pip install --no-cache-dir click requests;\
     wget $TF_WHEEL_REPO/$TF_WHEEL_NAME;\
     python3 -m pip install --upgrade --no-cache-dir --upgrade $TF_WHEEL_NAME
+    rm *.whl
