--- a/.github/workflows/tf_with_versions.yml
+++ b/.github/workflows/tf_with_versions.yml
@@ -1,4 +1,4 @@
-name: multi arch build of tflite with pip with versions in tag
+name: multi arch amd/arm 64 build of tflite with pip with versions in tag
 
 on:
   workflow_dispatch:
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: tf/.
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           build-args: |
             "BUILD_FROM=ubuntu:${{ matrix.ubuntu_version }}"
             "PYMODBUS_VERSION=${{ matrix.pymodbus}}"
