--- a/tf_armv7/Dockerfile
+++ b/tf_armv7/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get -y update;\
     python3 -m pip install --no-cache-dir click requests;\
     python3 -m pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
     apt-get purge -y --auto-remove python3-pip;\
-    apt-get purge -y swig libjpeg-dev zlib1g-dev python3-dev python-is-python3 unzip git cmake make;\
+    apt-get purge -y --auto-remove swig libjpeg-dev zlib1g-dev python3-dev python-is-python3 unzip git cmake make;\
     apt-get clean
 
 COPY test.py openurl.py .
