meilleure compréhension de include dans les actions ?

--- a/.github/workflows/bios_with_emoncms_version.yml
+++ b/.github/workflows/bios_with_emoncms_version.yml
@@ -10,13 +10,11 @@ jobs:
       matrix:
         emoncms_src: [alexandrecuer/emoncms]
         branch: [stable]
+        alpine_version: [3.18]
+        php_version: [81]
         include:
-        - alpine_version: 3.18
-          php_version: 81
-          use_redispy_apk: 1
         - alpine_version: 3.19
           php_version: 82
-          use_redispy_apk: 1
     steps:
       -
         name: Checkout
