--- a/.github/workflows/bios_with_emoncms_version.yml
+++ b/.github/workflows/bios_with_emoncms_version.yml
@@ -10,10 +10,12 @@ jobs:
       matrix:
         emoncms_src: [alexandrecuer/emoncms]
         branch: [stable]
-        alpine_version: [3.18]
-        php_version: [81]
-        include:
+        alpine_version: [3.18, 3.19]
+        php_version: [81, 82]
+        exclude:
         - alpine_version: 3.19
+          php_version: 81
+        - alpine_version: 3.18
           php_version: 82
     steps:
       -
