--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -10,13 +10,18 @@ jobs:
       matrix:
         emoncms_src: [alexandrecuer/emoncms]
         branch: [stable]
-        include:
+        alpine_version: [3.16, 3.18]
+        php_version: [8, 81]
+        use_redispy_apk: [0, 1]
+        exclude:
         - alpine_version: 3.16
-          php_version: 8
-          use_redispy_apk: 0
-        - alpine_version: 3.18
           php_version: 81
+        - alpine_version: 3.18
+          php_version: 8
+        - alpine_version: 3.16
           use_redispy_apk: 1
+        - alpine_version: 3.18
+          use_redispy_apk: 0
     steps:
       -
         name: Checkout
@@ -45,6 +50,7 @@ jobs:
             "BUILD_FROM=alpine:${{ matrix.alpine_version }}"
             "PHP_VER=${{ matrix.php_version }}"
             "PHP_CONF=/etc/php${{ matrix.php_version }}/conf.d"
+            "USE_REDISPY_APK=${{ matrix.use_redispy_apk }}"
             "USE_REDISPY_APK=${{ matrix.use_redispy_apk }}"
           push: true
           tags: alexjunk/themis:alpine${{ matrix.alpine_version }}
