--- a/.github/workflows/bios_with_emoncms_version.yml
+++ b/.github/workflows/bios_with_emoncms_version.yml
@@ -6,17 +6,16 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      emoncms_src: alexandrecuer/emoncms
+      branch: stable
     strategy:
       matrix:
-        emoncms_src: [alexandrecuer/emoncms]
-        branch: [stable]
-        alpine_version: [3.18, 3.19]
-        php_version: [81, 82]
-        exclude:
+        include:
         - alpine_version: 3.19
-          php_version: 81
-        - alpine_version: 3.18
           php_version: 82
+        - alpine_version: 3.18
+          php_version: 81
     steps:
       -
         name: Checkout
@@ -37,7 +36,7 @@ jobs:
         id: emoncms_version
         name: get emoncms version
         run: |
-          wget https://raw.githubusercontent.com/${{ matrix.emoncms_src }}/${{ matrix.branch }}/version.json
+          wget https://raw.githubusercontent.com/${{ env.emoncms_src }}/${{ env.branch }}/version.json
           version=$(cat version.json | jq --raw-output '.version')
           echo $version
           echo "version=$version" >> "$GITHUB_OUTPUT"
@@ -48,8 +47,8 @@ jobs:
           context: emoncms/alpine_persistent/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           build-args: |
-            "EMONCMS_SRC=https://github.com/${{ matrix.emoncms_src }}"
-            "BRANCH=${{ matrix.branch }}"
+            "EMONCMS_SRC=https://github.com/${{ env.emoncms_src }}"
+            "BRANCH=${{ env.branch }}"
             "BUILD_FROM=alpine:${{ matrix.alpine_version }}"
             "PHP_VER=${{ matrix.php_version }}"
             "PHP_CONF=/etc/php${{ matrix.php_version }}/conf.d"
