DOCKERHUB_USERNAME in workflows

--- a/.github/workflows/bios.yml
+++ b/.github/workflows/bios.yml
@@ -52,4 +52,4 @@ jobs:
             "PHP_CONF=/etc/php${{ matrix.php_version }}/conf.d"
             "USE_REDISPY_APK=${{ matrix.use_redispy_apk }}"
           push: true
-          tags: alexjunk/themis:alpine${{ matrix.alpine_version }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/themis:alpine${{ matrix.alpine_version }}
