--- a/.github/workflows/bios_latest.yml
+++ b/.github/workflows/bios_latest.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       emoncms_src: alexandrecuer/emoncms
-      branch: stable
+      branch: bios-master
       alpine_version: 3.19
       php_version: 82
     steps:
@@ -40,4 +40,4 @@ jobs:
             "PHP_VER=${{ env.php_version }}"
             "PHP_CONF=/etc/php${{ env.php_version }}/conf.d"
           push: true
-          tags: alexjunk/themis:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/themis:latest
